[tool.poetry]
name = "yeda-frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
streamlit-modal = "^0.1.2"
extra-streamlit-components = "^0.1.71"
pytest = "^8.1.2"
bandit = "^1.7.8"
flake8 = "^7.0.0"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
